# MARC

./: CMakeLists.txt
cmake/: Config.cmake.in
sources/: marc_api.cpp
tests/: apitest.cpp
